Update styles1.css word spacing maybe fixed to left

--- a/midterm/styles1.css
+++ b/midterm/styles1.css
@@ -56,7 +56,7 @@ header {
       position: fixed;
       width: 100%;
       z-index: 10;
-      word-spacing: 30px;
+      word-spacing: 15px;
 }
 
 ul {
